--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                   <version>[3.8.7,)</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>[21,)</version>
+                  <version>[21,17)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
